adding some routes for the user on the swagger documentation
